Self-Learning-F1-Simulation

--- a/Self-Learning-F1-Simulation/templates/index.html
+++ b/Self-Learning-F1-Simulation/templates/index.html
@@ -43,7 +43,7 @@
                 <div class="game-info">
                     <div class="info-item">
                         <span class="label">Temps:</span>
-                        <span id="gameTime">0</span>s
+                        <span id="gameTime">0s</span>
                     </div>
                     <div class="info-item">
                         <span class="label">Tours:</span>
